# ECSE-427-projects

./: README.md
file_system/: CMakeLists.txt  README.md  compile.sh
file_system/include/: sfs_api.h
file_system/others/: Makefile
file_system/src/: linkedList.c  sfs_api.c
file_system/testers/: fuse_wrap_new.c  fuse_wrap_old.c
shell/: CMakeLists.txt  README.md  compile.sh
shell/include/: commands.h
shell/shell/: .Makefile.swp  README.md
shell/shell/src/: helpers.h  main.c
shell/src/: commands.c  helpers.c
thread/: CMakeLists.txt  README.md  compile.sh
thread/file_system/: CMakeLists.txt  README.md  compile.sh
thread/file_system/include/: helpers.h  linkedList.h
thread/file_system/src/: helpers.c
thread/file_system/testers/: sfs_test2.c
thread/include/: helpers.h  queue.h  sut.h
thread/src/: helpers.c  main.c  queue.c  sut.c
